<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signin"
    tools:context=".SignIn">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:textColor="@color/whiteText"
            android:textColorHint="@color/whiteText"
            android:hint="@string/txtUsername"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:textColor="@color/whiteText"
            android:textColorHint="@color/whiteText"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:hint="@string/txtPassword"
            android:textStyle="bold"
            />

<!--
        <com.rey.material.widget.CheckBox
        -->
        <CheckBox
            android:id="@+id/chckboxRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:text="@string/chckboxRememberMe"
            android:textSize="20sp"
            android:textStyle="bold"
            android:buttonTint="@android:color/white"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/radius"
            android:text="@string/btnSignIn"
            android:textColor="@color/whiteText"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtNoAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNoAccount"
            android:textColor="@color/whiteText"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:gravity="center|bottom"
            android:clickable="true"
            android:textStyle="bold"
            />

    </LinearLayout>


</RelativeLayout>