<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/firstNameLinearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtFirstName"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/txtInputFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName|textCapSentences"
                android:textSize="20sp"
                android:hint="@string/txtFirstName"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastNameLinearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtLastName"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="20sp"

                />
            <EditText
                android:id="@+id/txtInputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName|textCapSentences"
                android:textSize="20sp"
                android:hint="@string/txtLastName"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLinearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtEmail"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="20sp"

                />
            <EditText
                android:id="@+id/txtInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:hint="@string/txtEmail"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/usernameLinearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtUsername"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="20sp"

                />
            <EditText
                android:id="@+id/txtInputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:textSize="20sp"
                android:hint="@string/txtUsername"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordLinearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPassword"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="20sp"

                />
            <EditText
                android:id="@+id/txtInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:hint="@string/txtPassword"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/genderLinearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtGender"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:textSize="20sp"

                />

            <RadioGroup
                android:id="@+id/rdgrpGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rdbtnMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rdbtnMale"
                    android:checked="true"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/rdbtnFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rdbtnFemale"
                    android:layout_weight="1"/>

            </RadioGroup>


        </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpLinearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/radius"
            android:text="@string/btnSignUp"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtAlreadyHaveAccountSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAlreadyHaveAccountSignIn"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:textSize="15sp"
            android:gravity="center"
            android:clickable="true"
            android:onClick="signIn"
            />
    </LinearLayout>


    </LinearLayout>

</RelativeLayout>