<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome"
    tools:context=".Welcome">


    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/txtWelcome"
        android:textColor="@android:color/holo_green_light"
        android:textSize="80sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnIAmNew"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:background="@drawable/radius"
            android:text="@string/btnIAmNew"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnIveBeenHere"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:background="@drawable/radius"
            android:text="@string/btnIveBeenHere"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>