<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetails">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="#0e0d0e"
            app:expandedTitleTextAppearance="@android:color/transparent">

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="Food Name"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="parallax">
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>





    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtRate"
                            android:padding="12dp"
                            android:text="Rate this food"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RatingBar
                            android:id="@+id/ratingBar"
                            android:rating="0"
                            android:max="5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:numStars="5"/>

                        <TextView
                            android:id="@+id/txtWriteReview"
                            android:padding="12dp"
                            android:layout_gravity="center"
                            android:text="@string/rateFood"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>
				
				<LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_prep"
                        android:src="@drawable/time"
                        android:layout_width="50dp"
                        android:layout_weight="1"
                        android:layout_height="50dp" />
                    <TextView
                        android:id="@+id/txtPrep"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:text="test"
                        android:textStyle="italic|bold"
                        />

                    <ImageView
                        android:id="@+id/img_prep1"
                        android:src="@drawable/difficulty"
                        android:layout_width="50dp"
                        android:layout_weight="1"
                        android:layout_height="50dp" />
                    <TextView
                        android:id="@+id/txtDifficulty"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:text="test"
                        android:textStyle="italic|bold"
                        />

                    <ImageView
                        android:id="@+id/img_prep2"
                        android:src="@drawable/fork"
                        android:layout_width="50dp"
                        android:layout_weight="1"
                        android:layout_height="50dp" />
                    <TextView
                        android:id="@+id/txtHowMany"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:text="test"
                        android:textStyle="italic|bold"
                        />

                </LinearLayout>



                <TextView
                    android:id="@+id/txtIngredientsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="22dp"
                    android:text="Ingredients:"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/txtIngredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/ingridients"
                    android:textColor="@color/colorGrey"/>

                <TextView
                    android:id="@+id/txtDirectionsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="22dp"
                    android:text="Directions:"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/txtDirections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/directions"
                    android:textColor="@color/colorGrey"
                    android:textSize="15dp"
                    android:textStyle="normal" />
					
				<VideoView
                    android:id="@+id/video_food"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="300dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    />


            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

   

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>